// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code renders correctly 1`] = `
<DocumentFragment>
  <code
    class="u-code"
    data-name="code"
  >
    lorem ipsum dolor
  </code>
</DocumentFragment>
`;

exports[`Code renders correctly a multi-line code snippet 1`] = `
<DocumentFragment>
  <code
    class="u-code u-code--multiline"
    data-name="code"
  >
    lorem ipsum dolor sit amet
  </code>
</DocumentFragment>
`;
